src/css/imports/style.scss
/* ... */
.feedback {
    &__title {
        display: block;
        color: #fff;
        font-size: 1.44rem;
        font-weight: 300;
        margin-bottom: 1rem;
    }

    &__input-container {
        display: flex;
    }
}

.features {
    margin-top: 95px;
    padding-bottom: 77px;

    &__feature {
        text-align: center;

        &-title {
            color: #fff;
            margin: 13px 0 0;
            font-weight: 400;
        }

        &-description {
            color: rgba(255, 255, 255, 0.6);
            margin: 9px 0 0;
            font-weight: 300;
        }
    }

    &__divider {
        margin-top: 45px;
        height: 4px;
        background: linear-gradient(89.76deg, rgba(182, 244, 146, 0.3) 10.64%, rgba(51, 139, 147, 0.3) 91.19%);
        border-radius: 4px;
    }
}

.projects {
    margin-top: 100px;

    &__title {
        margin-bottom: 32px;
    }

    &__project {
        background-color: #197D86;
        border-radius: 4px;
        padding: 24px;

        &-title {
            color: white;
            font-weight: 500;
            margin-bottom: 16px;
        }

        &-description {
            color: rgba(255, 255, 255, 0.6);
            font-weight: 300;
        }

        &-links {
            list-style-type: none;
            margin: 0;
            padding: 0;
            letter-spacing: 16px;
            font-weight: 500;

            & li {
                letter-spacing: normal;
                display: inline-block;
                color: white;

                &:hover {
                    text-decoration: underline;
                }
            }
        }
    }
}

.articles {
    margin-top: 51px;

    &__content {
        margin-top: 32px;
    }

    &__article-title {
        margin-bottom: 0;
    }

    &__article {
        border: 2px solid rgba(10, 34, 94, 0.19);
        padding: 24px;
        border-radius: 5px;

        &-title {
            color: #1754ED;
            font-weight: 600;
            font-size: 1rem;
        }

        &-description {
            color: #6D6D7A;
            margin: 16px 0 0;
            font-weight: 300;
        }
    }
}

.footer {
    background: linear-gradient(1.36deg, #213976 24.73%, #264694 76.82%);
    color: rgba(255, 255, 255, 0.8);
    margin-top: 100px;
    padding-top: 40px;
    padding-bottom: 50px;

    &__left {
        text-align: left;
    }

    &__right {
        text-align: right;
    }

    &__separator {
        height: 1px;
        background-color: rgba(255, 255, 255, 0.3);
        margin: 25px 15px 38px;
    }

    &__terms {
        text-align: right;
        font-size: 0.78rem;
        line-height: 1rem;
    }
}

.browsers {
    list-style-type: none;
    letter-spacing: 83px;
    line-height: 95px;
    margin: 0;
    padding: 0;
    text-align: center;

    & li {
        display: inline-block;
        letter-spacing: normal;
    }

    & img {
        width: 48px;
        height: 48px;
    }
}

.pricing {
    margin-top: 100px;
}

.pricing-range {
    &__odometer-container {
        display: inline-block;
        font-family: 'Ubuntu Mono', monospace;
        font-size: 46px;
        line-height: 48px;
        border: 2px solid rgba(44, 84, 183, 0.2);
        border-radius: 4px;
        vertical-align: middle;
        padding: 0 7px;
    }

    & label {
        margin-bottom: 24px;
    }

    &__range {
        color: #2C54B7;

        &-line {
            position: relative;
            height: 150px;
            display: flex;
            justify-content: space-between;
            padding-left: 30px;

            & .lol {
                position: absolute;
                bottom: 51px;
                width: 100%;
                left: 0;
                height: 12px;
                border: 4px solid rgba(44, 84, 183, 0.2);
                border-radius: 4px;
            }

            & .range-item-container {
                display: flex;
                flex-direction: column;
                justify-content: center;
                align-items: center;
                z-index: 10;
                cursor: pointer;

                & > p {
                    font-size: 1.33rem;
                    margin-bottom: 0;
                    transition: transform 0.3s;
                }

                & > div {
                    width: 20px;
                    height: 20px;
                    border-radius: 10px;
                    background-color: #6B7EAD;
                    transition: transform 0.3s, background-color 0.3s;
                }

                &_selected {
                    & > p {
                        transform: translateY(-15px) scale(1.53);
                    }

                    & > div {
                        transform: scale(2.1);
                        background-color: #1754ED;
                    }
                }
            }
        }
    }

    &__config {
        color: #0A225E;
        font-size: 1.33rem;
        display: flex;
    }

    &__price-label {
        margin-left: 32px;
    }

    &__price-label-currency {
        vertical-align: middle;
    }

    &__credentials {
        & input {
            margin-right: 24px;

            &:last-child {
                margin-right: 0;
            }

            &.input {
                width: 280px;
            }

            &.button {
                width: 130px;
            }
        }
    }

    &__duration-label-text, &__price-label-text {
        margin-right: 10px;
    }
}
/* ... */

